# steve

./: .gitignore  4oiqcouicgegulkdoof5krtmer9ram6t.darc  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  IMPLEMENTATION_PLAN.md  PLAN.md  README.md  build.rs  manifest  steve-debug-20260410-154337.md
.beads/: README.md  config.yaml  issues.jsonl  metadata.json
.beads/hooks/: pre-commit
.claude/: settings.json
.claude/agents/: code-reviewer.md
.claude/skills/cargo-check/: SKILL.md
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
docs/: vision.md
docs/plans/: 2026-02-26-context-management-layer-design.md  2026-02-27-tui-redesign-design.md  2026-02-27-tui-redesign-plan.md  2026-02-28-ui-polish-token-clarity.md
docs/superpowers/plans/: 2026-04-02-clickable-links.md  2026-04-08-async-lsp-migration.md  2026-04-14-lsp-auto-restart.md  2026-04-19-remove-memory-tool.md  2026-05-07-eval-phase-6-data-foundation.md
docs/superpowers/specs/: 2026-03-10-escalating-tool-loop-warnings-design.md  2026-04-01-code-review-agent-design.md  2026-04-01-osc8-hyperlinks-design.md  2026-04-08-async-lsp-migration-design.md  2026-04-12-lsp-auto-restart-design.md  2026-04-19-remove-memory-tool-design.md  2026-05-06-eval-harness-paired-comparison-pivot.md
eval/: VALIDATION.md
eval/scenarios/_judge-smoke/: facts.txt  scenario.toml
eval/scenarios/_smoke/: greeting.txt  scenario.toml
eval/scenarios/find-symbol-vs-grep/: Cargo.toml  scenario.toml
eval/scenarios/find-symbol-vs-grep/src/: conn.rs  main.rs
eval/scenarios/glob-for-find/: scenario.toml
eval/scenarios/glob-for-find/src/: foo.py
eval/scenarios/list-before-creating-conflicting-file/: Justfile  scenario.toml
eval/scenarios/lsp-rename-vs-sed/: Cargo.toml  scenario.toml
eval/scenarios/lsp-rename-vs-sed/src/: lib.rs  main.rs
eval/scenarios/multi-turn-honor-constraint/: Cargo.toml  scenario.toml
eval/scenarios/multi-turn-honor-constraint/src/: lib.rs
eval/scenarios/no-hallucinated-tool-output/: report.txt  scenario.toml
eval/scenarios/read-before-edit-untracked/: scenario.toml  secrets.txt
eval/scenarios/recover-after-destructive-edit/: data.json  scenario.toml
eval/scenarios/simple-bug-fix/: scenario.toml
eval/scenarios/simple-bug-fix/tests/: test_add.py
eval/scenarios/stop-guessing-after-failures/: scenario.toml  script.sh
src/: app.rs  command.rs  event.rs  export.rs  file_ref.rs  lib.rs  main.rs  stream.rs
src/app/: commands.rs  constants.rs  context.rs  event_loop.rs  helpers.rs  input.rs  key_handling.rs  mod.rs  prompt.rs  session.rs  tests.rs  tool_display.rs  types.rs
src/cli/: commands.rs  format.rs  mod.rs
src/config/: agents.rs  mod.rs  persist.rs  types.rs
src/context/: cache.rs  compressor.rs  mod.rs
src/data/: mod.rs  state.rs  views.rs
src/diagnostics/: checks.rs  mod.rs  types.rs
src/eval/: baseline.rs  capture.rs  cli.rs  expectations.rs  judge.rs  mod.rs  results.rs  runner.rs  scenario.rs  score.rs  transcript.rs  workspace.rs
src/lsp/: client.rs  manager.rs  mod.rs  server.rs  types.rs
src/mcp/: manager.rs  mod.rs  server.rs  transport.rs  types.rs
src/mcp/oauth/: callback.rs  credential_store.rs  mod.rs
src/permission/: mod.rs  types.rs
src/project/: mod.rs
src/provider/: client.rs  config.rs  mod.rs
src/session/: message.rs  mod.rs  types.rs
src/storage/: mod.rs
src/stream/: agent.rs  mod.rs  phases.rs  recovery.rs  tools.rs
src/task/: mod.rs  types.rs
src/tool/: agent.rs  bash.rs  copy.rs  delete.rs  edit.rs  find_symbol.rs  glob.rs  grep.rs  list.rs  lsp.rs  memory.rs  mkdir.rs  mod.rs  move_.rs  patch.rs  question.rs  read.rs  symbols.rs  task.rs  todo.rs  webfetch.rs  write.rs
src/ui/: autocomplete.rs  diagnostics_overlay.rs  input.rs  layout.rs  lsp_diagnostics_overlay.rs  markdown.rs  mcp_overlay.rs  message_area.rs  message_block.rs  mod.rs  model_picker.rs  primitives.rs  selection.rs  session_picker.rs  sidebar.rs  status_line.rs  syntax.rs  terminal_detect.rs  theme.rs
src/ui/message_area/: mod.rs  render.rs
src/ui/sidebar/: mod.rs  render.rs
src/usage/: db.rs  mod.rs  types.rs
tests/: config_integration.rs  permission_integration.rs  tool_integration.rs  ui_integration.rs  usage_integration.rs
