[package]
name = "steve"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# TUI (pinned to match tui-textarea 0.7's ratatui/crossterm deps)
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tui-textarea = "0.7"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonc-parser = { version = "0.29", features = ["serde"] }

# LLM Client
async-openai = { version = "0.32", features = ["chat-completion"] }

# Search tools (ripgrep ecosystem)
grep = "0.3"
ignore = "0.4"
glob = "0.3"

# HTTP (webfetch tool)
reqwest = { version = "0.12", features = ["json", "blocking"] }
html2text = "0.14"

# Error handling
anyhow = "1"

# Logging (to file, not stdout — TUI owns stdout)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Async utilities
tokio-util = "0.7"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "6"
fs2 = "0.4"
