[package]
name = "steve"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# TUI
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
ratatui-textarea = "0.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonc-parser = { version = "0.29", features = ["serde"] }

# LLM Client
async-openai = { version = "0.33", features = ["chat-completion"] }

# Search tools (ripgrep ecosystem)
grep = "0.4"
ignore = "0.4"
glob = "0.3"

# HTTP (webfetch tool)
reqwest = { version = "0.12", features = ["json", "blocking"] }
html2text = "0.16"

# Error handling
anyhow = "1"

# Logging (to file, not stdout — TUI owns stdout)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Async utilities
tokio-util = "0.7"

# Enum derive macros
strum = { version = "0.28", features = ["derive"] }

# Process timeout
wait-timeout = "0.2"

# Unified diff application (fuzzy matching for AI-generated patches)
mpatch = "1.3"

# Rope data structure for efficient line-based text editing
ropey = "1"

# Trait object async
async-trait = "0.1"

# Clipboard (OSC 52)
base64 = "0.22"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "6"
fs2 = "0.4"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Unicode display width
unicode-width = "0.2"

# Usage analytics (SQLite)
rusqlite = { version = "0.34", features = ["bundled"] }

# Syntax highlighting for code blocks
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-fancy"] }

[dev-dependencies]
tempfile = "3"
