[package]
name = "steve"
version = "0.3.0"
edition = "2024"
rust-version = "1.91"
description = "A TUI AI coding agent powered by any OpenAI-compatible LLM API"
license = "MIT"
repository = "https://github.com/turboladen/steve"
keywords = ["ai", "coding-agent", "tui", "llm", "openai"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# TUI
crossterm = { version = "0.29", features = ["event-stream"] }
ratatui = "0.30"
ratatui-textarea = "0.9"

# Serialization
jsonc-parser = { version = "0.32", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# LLM Client
async-openai = { version = "0.34", features = ["chat-completion"] }

# Search tools (ripgrep ecosystem)
glob = "0.3"
grep = "0.4"
ignore = "0.4"

# HTTP (webfetch tool + MCP HTTP transport)
html2text = "0.16"
http = "1"
reqwest = { version = "0.13", features = ["json", "blocking"] }

# Error handling
anyhow = "1"

# Logging (to file, not stdout — TUI owns stdout)
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async utilities
tokio-util = "0.7"
futures-util = "0.3"

# Enum derive macros
strum = { version = "0.28", features = ["derive"] }

# Process timeout
wait-timeout = "0.2"

# Unified diff application (fuzzy matching for AI-generated patches)
mpatch = "1.3"

# Rope data structure for efficient line-based text editing
ropey = "1"

# Clipboard (OSC 52)
base64 = "0.22"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
directories = "6"
uuid = { version = "1", features = ["v4", "serde"] }

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Unicode display width
unicode-width = "0.2"

# Usage analytics (SQLite)
rusqlite = { version = "0.39", features = ["bundled"] }

# Syntax highlighting for code blocks
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-fancy"] }

# LSP type definitions for language server integration
lsp-types = "0.97"

# Tree-sitter parsing for structural code queries (symbols tool)
tree-sitter = "0.26"
tree-sitter-bash = "0.25"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-css = "0.25"
tree-sitter-fish = "3.6"
tree-sitter-go = "0.25"
tree-sitter-hcl = "1.1"
tree-sitter-java = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-json = "0.24"
tree-sitter-language = "0.1"
tree-sitter-lua = "0.5"
tree-sitter-python = "0.25"
tree-sitter-ruby = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-toml-ng = "0.7"
tree-sitter-typescript = "0.23"
tree-sitter-yaml = "0.7"
which = "8.0"
libc = "0.2.183"

# MCP client (Model Context Protocol)
rmcp = { version = "1.3", features = [
    "client",
    "transport-child-process",
    "transport-streamable-http-client-reqwest",
    "auth",
] }

# OAuth / HTTP transport support
async-trait = "0.1"
webbrowser = "1"
axum = "0.8"
url = "2"
sha2 = "0.11"
rand = "0.10"
urlencoding = "2"
gethostname = "1.1.0"

[dev-dependencies]
tempfile = "3"
